update AddNoteActivity & CheckAboutActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title">title</string>
     <string name="time">time</string>
     <string name="content">content</string>
+    <string name="about">About</string>
+    <string name="add">Add</string>
+    <string name="save">save</string>
 </resources>
