--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="about">About</string>
     <string name="add">Add</string>
     <string name="save">save</string>
+    <string name="enter_title_here">enter title here</string>
 </resources>
