add function for user input and store into json file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="add">Add</string>
     <string name="save">save</string>
     <string name="enter_title_here">enter title here</string>
+    <string name="notes_file">NotesFile.json</string>
+
 </resources>
